# CS2610Fa23ClassExamples

./: .gitignore  definitions.txt  styles.css
DjangoViteDemo2/: pyproject.toml
actualEventListeners/: package-lock.json  package.json
actualEventListeners/src/: App.jsx
clientsiderouting/: package-lock.json  package.json
clientsiderouting/src/: Router.jsx  main.jsx
contacts/: pyproject.toml
contacts/_project/: db.sqlite3
css_stuff/: package-lock.json  package.json
css_stuff/src/: App.css  App.jsx  Input.jsx  Input.module.css
django/first_django/: pyproject.toml
django/first_django/_server/_server/: settings.py  urls.py
django/first_django/_server/core/: urls.py  views.py
functions/: functions.py  middleware.py  parse.py
http/: web_server.py
keylistenerSideeffects/: package-lock.json  package.json
keylistenerSideeffects/src/: App.jsx
middleware/: demo.txt  endpoints.py  middleware.py  response.py  tests.py
myfirstreact/: package-lock.json
myfirstreact/src/: App.jsx
node/: main.js
notes/: pyproject.toml
password_generator/: pyproject.toml
password_generator/_project/_project/: settings.py  urls.py
password_generator/_project/core/: urls.py  views.py
password_generator/_project/core/templates/core/: index.html
rainbow_table_attack/: create_account.py  login.py
rainbow_table_attack/attacker/: find_passwords.py  rainbow.py
react-router/: package-lock.json
react-router/src/: App.jsx  main.jsx
spa/: package-lock.json
tcp/: client.py  server.py
todos/: package-lock.json
todos/src/: App.jsx  InputForm.jsx  Todo.jsx
(+29 files in other folders)
