[tool.poetry]
name = "first-django"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>"]
readme = "README.md"
packages = [{include = "first_django"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
